Add black words

--- a/mediatheque-scan/src/main/resources/blacklist.properties
+++ b/mediatheque-scan/src/main/resources/blacklist.properties
@@ -1,1 +1,1 @@
-movies.words=(;);.avi;.AVI;.mp4;TRUEFRENCH;FR;fr;DVD;DivX;[BDRip];BDRip;[DVDRip];VOST;Xvid;XviD;DVDRIP;PDTV;DVDrip;XVID;BN;PoneyClub;DVDRip;Dvdrip;XviD;AC3;PonyClub;.divx;.AVI;Energy;www;com;by;DVDSCR;PWD;[;];.;Eng;-aXXo;_
+movies.words=(;);.avi;.AVI;.mp4;TRUEFRENCH;FR;fr;DVD;DivX;[BDRip];BDRip;[DVDRip];VOST;Xvid;XviD;DVDRIP;PDTV;DVDrip;XVID;BN;PoneyClub;DVDRip;Dvdrip;XviD;AC3;PonyClub;.divx;.mkv;.AVI;CD;FRENCH;Repack;BLURAYDTS-HDMAx264-URAM;1080p;Energy;www;com;by;DVDSCR;PWD;[;];.;Eng;-aXXo;_
