--- a/mediatheque-scan/pom.xml
+++ b/mediatheque-scan/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<spring.version>4.3.5.RELEASE</spring.version>
 		<commons.version>3.1</commons.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
 	<dependencies>
