Moving to Spring 4

--- a/mediatheque-service/pom.xml
+++ b/mediatheque-service/pom.xml
@@ -25,11 +25,11 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
-		<!-- ><dependency>
+		<dependency>
 			<groupId>com.xtt.mediatheque</groupId>
 			<artifactId>mediatheque-persistence</artifactId>
 			<version>${project.parent.version}</version>
-		</dependency>-->
+		</dependency>
 
 		<dependency>
 			<groupId>com.xtt.mediatheque</groupId>
