--- a/mediatheque-tmdb/src/main/resources/tmdb.properties
+++ b/mediatheque-tmdb/src/main/resources/tmdb.properties
@@ -4,5 +4,5 @@ tmdb.api.movie=/3/movie/
 tmdb.api_key=9a7eb92121f4284df3595ce187aae9ad
 urlCover=http://cf2.imgobject.com/t/p/w500
 urlYoutube=http://www.youtube.com/watch?v=
-tmdb.search.query=http://api.themoviedb.org/3/search/movie?api_key=9a7eb92121f4284df3595ce187aae9ad&query={0}&language=fr
-tmdb.movie.query=http://api.themoviedb.org/3/movie/{0}?api_key=9a7eb92121f4284df3595ce187aae9ad&language=fr&append_to_response=casts,trailers
+tmdb.search.query=http://api.themoviedb.org/3/search/movie?api_key={key}&query={query}&language={language}
+tmdb.movie.query=http://api.themoviedb.org/3/movie/{movie}?api_key=9a7eb92121f4284df3595ce187aae9ad&language=fr&append_to_response=casts,trailers
