--- a/mediatheque-persistence/pom.xml
+++ b/mediatheque-persistence/pom.xml
@@ -74,6 +74,10 @@
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
