--- a/mediatheque-service/pom.xml
+++ b/mediatheque-service/pom.xml
@@ -42,5 +42,10 @@
 			<artifactId>mediatheque-utils</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 	</dependencies>
 </project>
