--- a/mediatheque-service/pom.xml
+++ b/mediatheque-service/pom.xml
@@ -2,45 +2,49 @@
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
-		<groupId>com.xtt.mediatheque</groupId>
-		<artifactId>mediatheque-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../mediatheque-parent</relativePath>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.3.RELEASE</version>
 	</parent>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<plateforme.version>1.0.0-SNAPSHOT</plateforme.version>
+	</properties>
+	
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.xtt.mediatheque</groupId>
 	<artifactId>mediatheque-service</artifactId>
 	<packaging>jar</packaging>
 	<name>mediatheque-service</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
-			<groupId>com.xtt.mediatheque</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>mediatheque-dto</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${plateforme.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.xtt.mediatheque</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>mediatheque-tmdb</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${plateforme.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.xtt.mediatheque</groupId>
+		<!-- <dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>mediatheque-persistence</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-
+			<version>${plateforme.version}</version>
+		</dependency>-->
 		<dependency>
-			<groupId>com.xtt.mediatheque</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>mediatheque-model</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${plateforme.version}</version>
 		</dependency>
-
 		<dependency>
-			<groupId>com.xtt.mediatheque</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>mediatheque-utils</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${plateforme.version}</version>
 		</dependency>
 		
 		<dependency>
