--- a/mediatheque-scan/pom.xml
+++ b/mediatheque-scan/pom.xml
@@ -2,10 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
-		<artifactId>mediatheque-parent</artifactId>
-		<groupId>com.xtt.mediatheque</groupId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../mediatheque-parent</relativePath>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.3.RELEASE</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
