--- a/mediatheque-webapp/src/main/resources/application.properties
+++ b/mediatheque-webapp/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.h2.console.enabled=true
 spring.datasource.name=mediatheque
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.initialization-mode=ALWAYS
-spring.datasource.url=jdbc:h2:file:~/mediatheque;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
+spring.datasource.url=jdbc:h2:file:~/mediatheque
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
