--- a/mediatheque-parent/pom.xml
+++ b/mediatheque-parent/pom.xml
@@ -17,7 +17,7 @@
 		<module>../mediatheque-persistence</module>
 		<module>../mediatheque-dto</module>
 		<module>../mediatheque-service</module>
-		<!-- <module>../mediatheque-scan</module>-->
+		<!-- <module>../mediatheque-scan</module> -->
 		<module>../mediatheque-webapp</module>
 	</modules>
 
@@ -29,6 +29,8 @@
 		<commons.collections.version>3.2.1</commons.collections.version>
 		<lombok.version>1.16.16</lombok.version>
 		<h2.version>1.4.197</h2.version>
+		<logback.version>1.2.3</logback.version>
+		<slf4j.version>1.8.0-beta2</slf4j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -94,6 +96,24 @@
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
 				<version>${h2.version}</version>
+			</dependency>
+
+			<!-- Logging -->
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
