Corrections d'étourderies dans les pom

--- a/mediatheque-webapp/pom.xml
+++ b/mediatheque-webapp/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>mediatheque-webapp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Mediatheque</name>
+	<name>mediatheque-webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
