--- a/mediatheque-tmdb/pom.xml
+++ b/mediatheque-tmdb/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<plateforme.version>1.0.0-SNAPSHOT</plateforme.version>
+		<sonar.exclusions>com.xtt.mediatheque.tmdb.model</sonar.exclusions>
 	</properties>
 
 	<dependencies>
